fixed aligning

--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
   /* The navbar */
   .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: green;
   }
   
   /* Navbar links */
@@ -62,3 +62,18 @@
     color: white;
     text-align:center;
   }
+  ul {
+    /* Use flex boxes to align li items */
+    display: flex;
+    justify-content: space-around;
+    /* Remove default padding from major browsers */
+    padding: 0;
+    /* Hide the default decorations for li items */
+    list-style: none;
+}
+
+h2 {
+  margin-left: 10px;
+}
+
+
